# ChangeLog for net-wireless/linux-wlan-ng
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/linux-wlan-ng/ChangeLog,v 1.57 2006/06/23 11:03:27 betelgeuse Exp $

*linux-wlan-ng-0.2.3-r2 (23 Jun 2006)

  23 Jun 2006; Petteri Räty <betelgeuse@gentoo.org>
  +files/linux-wlan-ng-0.2.3-shared.patch, +linux-wlan-ng-0.2.3-r2.ebuild:
  Suppressed error message on systems where /proc/sys/kernel/hotplug is empty.
  Thanks to Felix Wiemann <FelixWiemannBugs@gmx.de> for the fix. Fixes bug
  #136595.

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-linux-wlan-ng-0.2.0-r3,
  files/digest-linux-wlan-ng-0.2.1_pre23, files/digest-linux-wlan-ng-0.2.3,
  Manifest:
  Fixing SHA256 digest, pass four

*linux-wlan-ng-0.2.3-r1 (02 Apr 2006)

  02 Apr 2006; Petteri Räty <betelgeuse@gentoo.org>
  +linux-wlan-ng-0.2.3-r1.ebuild:
  Removed pcmcia support in favor of better alternatives like hostap and
  orinoco drivers.

  12 Feb 2006; Petteri Räty <betelgeuse@gentoo.org>
  -linux-wlan-ng-0.2.2.ebuild:
  Removed old version.

  29 Dec 2005; Simon Stelling <blubb@gentoo.org> linux-wlan-ng-0.2.3.ebuild:
  added ~amd64 keyword

*linux-wlan-ng-0.2.3 (19 Dec 2005)

  19 Dec 2005; Petteri Räty <betelgeuse@gentoo.org>
  linux-wlan-ng-0.2.0-r3.ebuild, -linux-wlan-ng-0.2.1_pre20.ebuild,
  linux-wlan-ng-0.2.1_pre23.ebuild, linux-wlan-ng-0.2.2.ebuild,
  +linux-wlan-ng-0.2.3.ebuild:
  Version bump. Added a note about other alternatives to linux-wlan-ng when
  not using the usb driver. Also corrected the LICENSE of all versions and
  removed the oldest 0.2.1_pre version.

  20 Nov 2005; Joseph Jezak <josejx@gentoo.org> linux-wlan-ng-0.2.2.ebuild:
  Marked ~ppc for bug #107794.

*linux-wlan-ng-0.2.2 (01 Oct 2005)

  01 Oct 2005; Petteri Räty <betelgeuse@gentoo.org>
  +files/linux-wlan-ng-gentoo-init, +linux-wlan-ng-0.2.2.ebuild:
  Version bump using the new splitted linux-wlan-ng ebuilds.
