@@ -17,15 +17,15 @@ DIST linux-wlan-ng-0.2.0.tar.gz 329432 RMD160 506d2bda58f3480a0a40c669d409989688
 DIST linux-wlan-ng-0.2.1pre23.tar.bz2 447233 RMD160 06b8289a68d40e03e41ee912383b9c08068c9b48 SHA1 daae4f9410b2892f3f07b4abcfad5f790dbc1bec SHA256 82752d79ee335412faa7806d415151809dca18ca7085dc68a33e7f889cdef335
 DIST linux-wlan-ng-0.2.3.tar.bz2 454053 RMD160 a39a6f17dd8a745992a557605d3f5734d8b7de95 SHA1 72fdb2d7af8e071db169b56df594d0ce8a91abc8 SHA256 97004d6cefd1b5c5f37efc1603e4103f9a809d79f8cc0faf2397fa882cdd6ee6
 DIST linux-wlan-ng-gentoo-init.gz 859 RMD160 f3480f599bf2e3f34a7eb102081ea71facb22493 SHA1 3f16b48a27498503a296650b24f248644af15654 SHA256 953b10f55248f4eacaaf4eaa694e564813a159205eb69992038556bd30d85d49
-DIST pcmcia-cs-3.2.5-3.2.6.diff.gz 23034 RMD160 012ec90c3b03c0752d80ecd8dc70655f12d5c135 SHA256 1a150e0941b4d128b88dfed2c6a9f0ed975d5723f3e2796d789a2e172e7fddf8
-DIST pcmcia-cs-3.2.5-3.2.7.diff.gz 28244 RMD160 106ec0334589ab9f036be92332d7048ebc09b51d SHA256 542f5b66920c403bb68bfcadedae389bbeca695afbecd2ef582e32c7547a1d84
-DIST pcmcia-cs-3.2.5-SMP-fix.diff.gz 320 RMD160 33e3e3da5ac822b072375174f6bc35ce81d24683 SHA256 c5e06e180be39370803df9c0bc8048b30515f221d6702e64adf410404dbdd6f3
-DIST pcmcia-cs-3.2.5-module-init-tools.diff.gz 460 RMD160 d4d14be50c62eccd94f40568757991486c6b92b7 SHA256 dcbe1d31d0d0af01abb2caada72eb55e30b1abbd821fb785ee6cd76e1fd20b00
-DIST pcmcia-cs-3.2.5.tar.gz 1266494 RMD160 43d43e63812c370c9092ddaf5b7de3b45704ced9 SHA256 39cc8747aa377482b61873287c65d5f9d387cd18b33ac3a28aa586843ad054bc
-EBUILD linux-wlan-ng-0.2.0-r3.ebuild 4858 RMD160 10ebec40313a0940b6b04daa27064fa31ac5482f SHA1 8cace9cc987f9d61e0fe1773e084cecd3e2d9a04 SHA256 e302ef236226f33ce34c6365f4d6672665b4f6c171f11624579a6cd4c4a65fec
-MD5 1813595ce112ddf92ec489d28ea74e52 linux-wlan-ng-0.2.0-r3.ebuild 4858
-RMD160 10ebec40313a0940b6b04daa27064fa31ac5482f linux-wlan-ng-0.2.0-r3.ebuild 4858
-SHA256 e302ef236226f33ce34c6365f4d6672665b4f6c171f11624579a6cd4c4a65fec linux-wlan-ng-0.2.0-r3.ebuild 4858
+DIST pcmcia-cs-3.2.5-3.2.6.diff.gz 23034 RMD160 012ec90c3b03c0752d80ecd8dc70655f12d5c135 SHA1 f2dabcacdd7a9bc9e6f3a9a728047dd945590a00 SHA256 1a150e0941b4d128b88dfed2c6a9f0ed975d5723f3e2796d789a2e172e7fddf8
+DIST pcmcia-cs-3.2.5-3.2.7.diff.gz 28244 RMD160 106ec0334589ab9f036be92332d7048ebc09b51d SHA1 419e1d7faa51c11f2be3b66942c64264b852d389 SHA256 542f5b66920c403bb68bfcadedae389bbeca695afbecd2ef582e32c7547a1d84
+DIST pcmcia-cs-3.2.5-SMP-fix.diff.gz 320 RMD160 33e3e3da5ac822b072375174f6bc35ce81d24683 SHA1 71171db4d334e336c8ffc9af60944c1952fef53f SHA256 c5e06e180be39370803df9c0bc8048b30515f221d6702e64adf410404dbdd6f3
+DIST pcmcia-cs-3.2.5-module-init-tools.diff.gz 460 RMD160 d4d14be50c62eccd94f40568757991486c6b92b7 SHA1 8944c6bf8e195263d50fb7ed7ffdd4282b79553a SHA256 dcbe1d31d0d0af01abb2caada72eb55e30b1abbd821fb785ee6cd76e1fd20b00
+DIST pcmcia-cs-3.2.5.tar.gz 1266494 RMD160 43d43e63812c370c9092ddaf5b7de3b45704ced9 SHA1 aa29b9c451e2181fa1eea6c26e9c03eb05f53743 SHA256 39cc8747aa377482b61873287c65d5f9d387cd18b33ac3a28aa586843ad054bc
+EBUILD linux-wlan-ng-0.2.0-r3.ebuild 4854 RMD160 b789f8e507e574e5aa89eda84347bd98c34f9af5 SHA1 35e4475977b4ef6560e58d27b47908f5bcaf21b9 SHA256 8e2720b76e325e3a5d437c1adcb4310630610219bfc8949da35bd27acba7bc96
+MD5 9f780d2e360aff75ec7949bd43ab1c87 linux-wlan-ng-0.2.0-r3.ebuild 4854
+RMD160 b789f8e507e574e5aa89eda84347bd98c34f9af5 linux-wlan-ng-0.2.0-r3.ebuild 4854
+SHA256 8e2720b76e325e3a5d437c1adcb4310630610219bfc8949da35bd27acba7bc96 linux-wlan-ng-0.2.0-r3.ebuild 4854
 EBUILD linux-wlan-ng-0.2.1_pre23.ebuild 3831 RMD160 554960985761e1743bbf7ae4f5836bf75b5bd1e6 SHA1 e29adadd4cb64c935a744345029d4bab0791c43d SHA256 7e8185adcd4329977a82501115de95fab5ee95032a696ddc49ca729b19b2eefb
 MD5 fb8021f1e563a5f4dec736741e8449e0 linux-wlan-ng-0.2.1_pre23.ebuild 3831
 RMD160 554960985761e1743bbf7ae4f5836bf75b5bd1e6 linux-wlan-ng-0.2.1_pre23.ebuild 3831
@@ -42,10 +42,10 @@ EBUILD linux-wlan-ng-0.2.3.ebuild 4483 RMD160 80489543e0898f2424e936fa7a438dbedd
 MD5 66c18a4ea3ece9f3121e444a516fd6ec linux-wlan-ng-0.2.3.ebuild 4483
 RMD160 80489543e0898f2424e936fa7a438dbedd2d012d linux-wlan-ng-0.2.3.ebuild 4483
 SHA256 8f231c655d8a81225e7d037e2bf4a68e45f7bc81ef1b51254805e6e63236db06 linux-wlan-ng-0.2.3.ebuild 4483
-MISC ChangeLog 12000 RMD160 61cb7848e1a71c8b8292ec6530d1c90c17ce07f6 SHA1 8fbb059c3b4c540f6b414ddd0739b922eb4018c6 SHA256 0b82f0cddf18b5cf4092d95362dd241fac1e8fb84078ace58b3d7c93e05c00a3
-MD5 fa5553d273eaad3d37daff0708b53e42 ChangeLog 12000
-RMD160 61cb7848e1a71c8b8292ec6530d1c90c17ce07f6 ChangeLog 12000
-SHA256 0b82f0cddf18b5cf4092d95362dd241fac1e8fb84078ace58b3d7c93e05c00a3 ChangeLog 12000
+MISC ChangeLog 12167 RMD160 2c036ffb9d25b22dd7df6bedd5f66bfefa0052b9 SHA1 8aedcb232f64d8e44b3db4f2435400845ee097b4 SHA256 d28360314e04fbd9356cc992dbfd8a7080fcb438f4a6941d2a4f0afb50e9419c
+MD5 ca4c8f282c73ab6ce949019079626f2e ChangeLog 12167
+RMD160 2c036ffb9d25b22dd7df6bedd5f66bfefa0052b9 ChangeLog 12167
+SHA256 d28360314e04fbd9356cc992dbfd8a7080fcb438f4a6941d2a4f0afb50e9419c ChangeLog 12167
 MISC metadata.xml 254 RMD160 405142be32b3bd0c5b01406de510a6f6eddeb877 SHA1 88ebd9738b470bb9f297a4c1ff0d61a69331c670 SHA256 cf0ce33c8adaba16d53ca70e86c8f768757e89a172711ce03f69baf17912ed15
 MD5 6ad1de0749fc3b426ff7f4f422d2484c metadata.xml 254
 RMD160 405142be32b3bd0c5b01406de510a6f6eddeb877 metadata.xml 254
@@ -66,9 +66,9 @@ MD5 b0151277be475255f82139fc101eae7f files/digest-linux-wlan-ng-0.2.3-r2 262
 RMD160 6e6a482a8ebdaf4bd7f77040cd3f717c25180b53 files/digest-linux-wlan-ng-0.2.3-r2 262
 SHA256 1755efc1d6124109999f9dda7aa3b4240e849ceaf3116244ff149783f635df09 files/digest-linux-wlan-ng-0.2.3-r2 262
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFEm8qIcxLzpIGCsLQRAh8pAJ99ZWHNBK5HxWT3awHTYz3fk12vagCeIMEN
-blxqrSC8FZEAO4QwvVNmjts=
-=XIgO
+iD8DBQFEz7GYQlM6RnzZP+IRAp+UAJsEOPSQjpAVhxnMXhVvfqpGvzfQCwCgiukr
+ILyV+vgy3hTfDMe8KEri0oY=
+=EiSd
 -----END PGP SIGNATURE-----
