@@ -1,6 +1,11 @@
 # ChangeLog for net-wireless/linux-wlan-ng
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/linux-wlan-ng/ChangeLog,v 1.57 2006/06/23 11:03:27 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/linux-wlan-ng/ChangeLog,v 1.58 2006/08/01 19:54:47 ticho Exp $
+
+  01 Aug 2006; Andrej Kacian <ticho@gentoo.org>
+  linux-wlan-ng-0.2.0-r3.ebuild:
+  Move back to ~x86, since this version doesn't work on 2.6.x kernels. See bug
+  #140166.
 
 *linux-wlan-ng-0.2.3-r2 (23 Jun 2006)
 
